# berytonite

./: .gitignore  BUILD.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  TODO.md  attribute.h
.github/workflows/: build-and-release.yml  build-and-test.yml
include/beryton/: api.h  base64.h  error.h  secure_random.h  sha256.h  util.h
include/beryton/internal/: api.h  attribute.h  compiler.h  forward.h
include/krypton/: base64.h  error.h  secure_random.h
src/: api.c  base64.c  error.c  secure_random.c  sha256.c  util.c
test/: base64.c  sha256.c
